syntax = "proto3";

package proto.music_service.person.v1;

option go_package = "github.com/VrMolodyakov/vgm/music/app/gen/go/music/album/v1;pb_music_album";

message Person {
    uint32 person_id  = 1;
    string first_name = 2;
    string last_name = 3;
}